adicionando string de conexão

--- a/quizAPI/quizAPI/appsettings.json
+++ b/quizAPI/quizAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DevConnection": "Server=localhost; Database=QuizDB; Uid=root; Pwd=@Gremio1010;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
